; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/lsasrv/extr_privileges.c_LsarpLookupPrivilegeName.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/lsasrv/extr_privileges.c_LsarpLookupPrivilegeName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i64, i64 }
%struct.TYPE_11__ = type { i64, i64 }
%struct.TYPE_10__ = type { i32, i32, i32* }

@SE_MIN_WELL_KNOWN_PRIVILEGE = common dso_local global i64 0, align 8
@SE_MAX_WELL_KNOWN_PRIVILEGE = common dso_local global i64 0, align 8
@STATUS_NO_SUCH_PRIVILEGE = common dso_local global i32 0, align 4
@WellKnownPrivileges = common dso_local global %struct.TYPE_12__* null, align 8
@STATUS_NO_MEMORY = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LsarpLookupPrivilegeName(%struct.TYPE_11__* %0, %struct.TYPE_10__** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca %struct.TYPE_10__**, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_10__** %1, %struct.TYPE_10__*** %5, align 8
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %24, label %12

12:                                               ; preds = %2
  %13 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @SE_MIN_WELL_KNOWN_PRIVILEGE, align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %24, label %18

18:                                               ; preds = %12
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @SE_MAX_WELL_KNOWN_PRIVILEGE, align 8
  %23 = icmp sgt i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %18, %12, %2
  %25 = load i32, i32* @STATUS_NO_SUCH_PRIVILEGE, align 4
  store i32 %25, i32* %3, align 4
  br label %115

26:                                               ; preds = %18
  store i64 0, i64* %7, align 8
  br label %27

27:                                               ; preds = %110, %26
  %28 = load i64, i64* %7, align 8
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** @WellKnownPrivileges, align 8
  %30 = call i64 @ARRAYSIZE(%struct.TYPE_12__* %29)
  %31 = icmp ult i64 %28, %30
  br i1 %31, label %32, label %113

32:                                               ; preds = %27
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** @WellKnownPrivileges, align 8
  %37 = load i64, i64* %7, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %36, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = icmp eq i64 %35, %41
  br i1 %42, label %43, label %109

43:                                               ; preds = %32
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load %struct.TYPE_12__*, %struct.TYPE_12__** @WellKnownPrivileges, align 8
  %48 = load i64, i64* %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %47, i64 %48
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = icmp eq i64 %46, %52
  br i1 %53, label %54, label %109

54:                                               ; preds = %43
  %55 = call i8* @MIDL_user_allocate(i32 4)
  %56 = bitcast i8* %55 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %56, %struct.TYPE_10__** %6, align 8
  %57 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %58 = icmp eq %struct.TYPE_10__* %57, null
  br i1 %58, label %59, label %61

59:                                               ; preds = %54
  %60 = load i32, i32* @STATUS_NO_MEMORY, align 4
  store i32 %60, i32* %3, align 4
  br label %115

61:                                               ; preds = %54
  %62 = load %struct.TYPE_12__*, %struct.TYPE_12__** @WellKnownPrivileges, align 8
  %63 = load i64, i64* %7, align 8
  %64 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %62, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 8
  %67 = call i32 @wcslen(i32 %66)
  %68 = sext i32 %67 to i64
  %69 = mul i64 %68, 4
  %70 = trunc i64 %69 to i32
  %71 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %72 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %71, i32 0, i32 0
  store i32 %70, i32* %72, align 8
  %73 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %74 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = sext i32 %75 to i64
  %77 = add i64 %76, 4
  %78 = trunc i64 %77 to i32
  %79 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %80 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %79, i32 0, i32 1
  store i32 %78, i32* %80, align 4
  %81 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %82 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %81, i32 0, i32 1
  %83 = load i32, i32* %82, align 4
  %84 = call i8* @MIDL_user_allocate(i32 %83)
  %85 = bitcast i8* %84 to i32*
  %86 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %87 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %86, i32 0, i32 2
  store i32* %85, i32** %87, align 8
  %88 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %89 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %88, i32 0, i32 2
  %90 = load i32*, i32** %89, align 8
  %91 = icmp eq i32* %90, null
  br i1 %91, label %92, label %96

92:                                               ; preds = %61
  %93 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %94 = call i32 @MIDL_user_free(%struct.TYPE_10__* %93)
  %95 = load i32, i32* @STATUS_NO_MEMORY, align 4
  store i32 %95, i32* %3, align 4
  br label %115

96:                                               ; preds = %61
  %97 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %98 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %97, i32 0, i32 2
  %99 = load i32*, i32** %98, align 8
  %100 = load %struct.TYPE_12__*, %struct.TYPE_12__** @WellKnownPrivileges, align 8
  %101 = load i64, i64* %7, align 8
  %102 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %100, i64 %101
  %103 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %102, i32 0, i32 0
  %104 = load i32, i32* %103, align 8
  %105 = call i32 @wcscpy(i32* %99, i32 %104)
  %106 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %107 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  store %struct.TYPE_10__* %106, %struct.TYPE_10__** %107, align 8
  %108 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %108, i32* %3, align 4
  br label %115

109:                                              ; preds = %43, %32
  br label %110

110:                                              ; preds = %109
  %111 = load i64, i64* %7, align 8
  %112 = add i64 %111, 1
  store i64 %112, i64* %7, align 8
  br label %27

113:                                              ; preds = %27
  %114 = load i32, i32* @STATUS_NO_SUCH_PRIVILEGE, align 4
  store i32 %114, i32* %3, align 4
  br label %115

115:                                              ; preds = %113, %96, %92, %59, %24
  %116 = load i32, i32* %3, align 4
  ret i32 %116
}

declare dso_local i64 @ARRAYSIZE(%struct.TYPE_12__*) #1

declare dso_local i8* @MIDL_user_allocate(i32) #1

declare dso_local i32 @wcslen(i32) #1

declare dso_local i32 @MIDL_user_free(%struct.TYPE_10__*) #1

declare dso_local i32 @wcscpy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
